--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -110,20 +110,22 @@ body > footer {
   /* Navbar             */
   /* --------------------*/
 
-nav {
+.navbar {
   background-color: black;
   width: 100vw;
   height: 40vh;
   display: flex;
-  justify-content: space-between;
   flex-direction: row;
+  /* 
+  justify-content: space-between;
+   */
 }
 
 
 .navBtn { 
   text-decoration: none;
   list-style: none;
-  
-  align-items: center;
-  justify-content: center;
+  color: black;
+  font-weight: bold;
+  margin: 1rem;
 }
