about me almost complete- needs formatting photo/txt, projects rendering but pictures are off, they are all different sizes and overflowing the root container

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -41,11 +41,16 @@
     background-size: cover;
 }
 
+img {
+  max-width: 100%;
+  display: block;
+}
+
 /* Sticky footer */
 
 body > footer {
-  /* position: sticky;
-  top: 100vh; */
+  position: sticky;
+  top: 100vh;
 }
 
 /* --------------------*/
@@ -126,7 +131,7 @@ body > footer {
 
 .navbar {
   background-color: black;
-  width: 100vw;
+  /* width: 100vw; */
   height: 20vh;
   display: flex;
   
@@ -172,6 +177,8 @@ body > footer {
     width: 100%;
     background-color: black;
     color: var(--light);
+    position: sticky;
+    top: 1000vh;
   }
   
   .footerUl {
@@ -179,7 +186,7 @@ body > footer {
     justify-content: space-evenly;
     font-size: 1.5em;
     align-items: center;
-    width: 100vw;
+    /* width: 100vw; */
     height: 100%;
   }
 
@@ -205,11 +212,30 @@ body > footer {
 
 #about { 
   font-size: 1rem;
-  padding: 2rem;
-  padding-left: 8rem;
-  padding-right: 8rem;
-  border: 5px double black;
   margin: 1rem;
+  padding: 2rem;
+  /* padding-left: 8rem;
+  padding-right: 8rem; */
+  border: 5px double black;
+  border-top-left-radius: 200px;
+  border-bottom-right-radius: 200px;
+  display: flex;
+}
+
+#me {
+  border-radius: 40%;
+  /* shape-outside: ellipse(); */
+  height: 20rem;
+  padding-left: 4rem;
+  margin-right: -6rem;
+  filter: grayscale(50%);
+}
+
+.bio {
+  display: flex;
+  flex-direction: column;
+  padding-left: 6rem;
+  padding-right: 6rem; 
 }
 
   .opening-line:first-letter {
@@ -218,4 +244,23 @@ body > footer {
 
   .aboutPara {
     font-size: 1rem;
+  }
+
+  /* --------------------*/
+  /* Project section     */
+  /* --------------------*/
+
+  #projects { 
+    padding: 2rem;
+    display: flex;
+    flex-flow: row wrap;
+    overflow:auto;
+  }
+
+  .cardCont {
+    margin: 1rem;
+  }
+
+  .cardImg {
+    
   }
