all done except resume download button not working, resume preview not working, footer problem on portfolio page, nav buttons not highlighted when on them

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -48,7 +48,7 @@ img {
 
 /* Sticky footer */
 
-body > footer {
+footer {
   position: sticky;
   top: 100vh;
 }
@@ -132,7 +132,7 @@ body > footer {
 .navbar {
   background-color: black;
   /* width: 100vw; */
-  height: 20vh;
+  height: 19vh;
   display: flex;
   
   
@@ -150,6 +150,11 @@ body > footer {
   margin-top: 2rem;
   list-style: none;
 }
+
+/* .navBtn:active { 
+  border-bottom: 5px var(--eggplant) solid;
+  color: #82b8d4;
+} */
 
 .navBtnLink:hover {
   border-bottom: 5px var(--eggplant) solid;
@@ -169,16 +174,26 @@ body > footer {
 
 .socialIcons {
   display: flex;
-  padding: 1rem;
+  padding: 3rem;
 }
 
 .linkedIcon {
-  width: 60px;
-  height: 60px;
-  opacity: 60%;
+  width: 50px;
+  height: 50px;
+  opacity: 50%;
 }
 
 .linkedIcon:hover {
+  opacity: 100%;
+}
+
+.gitIcon {
+  opacity: 50%;
+  width: 50px;
+  height: 50px;
+}
+
+.gitIcon:hover {
   opacity: 100%;
 }
 
@@ -192,8 +207,9 @@ body > footer {
     width: 100%;
     background-color: black;
     color: var(--light);
-    position: sticky;
-    top: 1000vh;
+    /* position: fixed;
+    bottom: 0;
+    left: 0; */
   }
   
   .footerUl {
@@ -229,28 +245,26 @@ body > footer {
   font-size: 1rem;
   margin: 1rem;
   padding: 2rem;
-  /* padding-left: 8rem;
-  padding-right: 8rem; */
   border: 5px double black;
   border-top-left-radius: 200px;
   border-bottom-right-radius: 200px;
   display: flex;
+  background-color: rgba(220, 220, 228, 0.774);
 }
 
-#me {
-  border-radius: 40%;
-  /* shape-outside: ellipse(); */
+#meImg {
+  border-radius: 200px;
   height: 20rem;
   padding-left: 4rem;
-  margin-right: -6rem;
+  margin-right: -4rem;
   filter: grayscale(50%);
 }
 
 .bio {
   display: flex;
   flex-direction: column;
-  padding-left: 6rem;
-  padding-right: 6rem; 
+  padding-left: 7rem;
+  padding-right: 7rem; 
 }
 
   .opening-line:first-letter {
@@ -280,18 +294,11 @@ body > footer {
     transform: scale(1.1) rotate(-10deg);
   }
 
-  /* .cardCont:hover {
-   
-  } */
-/* 
-  .cardImg {
-    
-  } */
-
   /* --------------------*/
   /* Resume section      */
   /* --------------------*/
-#resume {
+#resume,
+.contactInfoCont {
   padding: 2rem;
   padding-left: 8rem;
   font-size: 1rem;
@@ -301,10 +308,7 @@ body > footer {
 
   .border1 {
     border: 1px solid black;
-    
     min-width: 30rem;
-    
-    
   }
 
   .border2 {
@@ -317,3 +321,43 @@ body > footer {
     padding: 1rem;
     background-color: rgba(220, 220, 228, 0.774);
   }
+
+  .resumeLink {
+    text-decoration: none;
+
+  }
+
+/* --------------------*/
+/* Contact section     */
+/* --------------------*/
+
+.contactLi,
+.contactLiLink {
+  text-decoration: none;
+  list-style: none;
+  color: inherit;
+  margin-bottom: 1rem;
+  font-size: 1.1rem;
+}
+
+.contactLiLink:hover {
+  color: #82b8d4;
+}
+
+.border1C {
+  border: 1px solid black;
+  min-width: 30rem;
+  padding: 2px;
+}
+
+.border2C {
+  border: 3px solid black;
+  padding: 2px;
+}
+
+.border3C {
+  border: 1px solid black;
+  padding-left: 1rem;
+  background-color: rgba(220, 220, 228, 0.774);
+}
+
