--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -32,13 +32,21 @@
     margin: 0;
   }
 
+  /* had background-image first without rest on same line */
+  html {
+    background-image: url(../images/background-image.jpg);
+    /* background: url(../images/background-image.jpg) no-repeat center center fixed; */
+    background-repeat: no-repeat;
+    background-position: center fixed;
+    background-size: cover;
+
+  }
+
 #root { 
     font-family: 'Red Hat Display', sans-serif;
     font-size: 62.5%;
-    background-image: url(../images/background-image.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    
+    
 }
 
 img {
@@ -48,7 +56,7 @@ img {
 
 /* Sticky footer */
 
-footer {
+body > footer {
   position: sticky;
   top: 100vh;
 }
@@ -151,10 +159,11 @@ footer {
   list-style: none;
 }
 
-/* .navBtn:active { 
+.active { 
   border-bottom: 5px var(--eggplant) solid;
   color: #82b8d4;
-} */
+}
+
 
 .navBtnLink:hover {
   border-bottom: 5px var(--eggplant) solid;
@@ -250,6 +259,8 @@ footer {
   border-bottom-right-radius: 200px;
   display: flex;
   background-color: rgba(220, 220, 228, 0.774);
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgba(17, 17, 17, 0.171),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
 
 #meImg {
@@ -258,6 +269,7 @@ footer {
   padding-left: 4rem;
   margin-right: -4rem;
   filter: grayscale(50%);
+  
 }
 
 .bio {
