--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -49,14 +49,12 @@ body {
 }
 
 main {
-  flex-grow: 1;
+  flex: 1 0 auto;
 }
 
 #root { 
     font-family: 'Red Hat Display', sans-serif;
     font-size: 62.5%;
-    
-    
 }
 
 img {
@@ -226,9 +224,6 @@ img {
     width: 100%;
     background-color: black;
     color: var(--light);
-    /* position: fixed;
-    bottom: 0;
-    left: 0; */
   }
   
   .footerUl {
@@ -352,6 +347,7 @@ img {
 /* --------------------*/
 /* Contact section     */
 /* --------------------*/
+
 
 .contactLi,
 .contactLiLink {
