--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,7 +15,7 @@
   --magenta: #7b0828;
   --rust: #af3800;
   --sapphire: #066699;
-  --turqoise: #0d838b;
+  --turquoise: #0d838b;
   --mustard: #ffb400;
   --pale: #93a8ac;
   --pale-pink: #e0b2bf;
