--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -309,7 +309,7 @@ img {
 
 .border1 {
   border: 1px solid black;
-  min-width: 30rem;
+  min-width: 100rem;
 }
 
 .border2 {
@@ -330,6 +330,32 @@ img {
 /* --------------------*/
 /* Contact section     */
 /* --------------------*/
+
+
+.contactPage {
+  display:flex;
+  /* flex-direction: column; */
+  align-items: center;
+}
+
+
+
+.contactForm {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  margin-bottom: 3rem;
+}
+
+.contactFormSendBtn {
+  margin-top: 1rem;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
 
 .contactLi,
 .contactLiLink {
@@ -357,6 +383,7 @@ img {
 
 .border3C {
   border: 1px solid black;
-  padding-left: 1rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
   background-color: rgba(220, 220, 228, 0.774);
 }
