--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -360,9 +360,9 @@ margin: 1.5rem;
   margin-bottom: 3rem;
 }
 
-.contactFormSendBtn {
+/* .contactFormSendBtn {
   margin-top: 1rem;
-}
+} */
 
 .hidden {
   visibility: hidden;
@@ -395,7 +395,7 @@ margin: 1.5rem;
 
 .border3C {
   border: 1px solid black;
-  padding-left: 4rem;
-  /* padding-right: 4rem; */
+  padding-left: 3rem;
+  padding-right: 3rem;
   background-color: rgba(220, 220, 228, 0.774);
 }
